--- a/static/style3.css
+++ b/static/style3.css
@@ -226,3 +226,34 @@ a.article, a.article:hover {
     top: 0;
     right: 0;
 }
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 16px;
+    }
+
+    #sidebar {
+        left: -100%;
+    }
+
+    #sidebar.active {
+        left: 0;
+    }
+
+    .container img {
+        max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        font-size: 18px;
+    }
+
+    #sidebar {
+        left: 0;
+    }
+
+    #content {
+        padding: 20px 40px;
+    }
+}
